--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@ section {
 
 #about_us p {
   width: 43em;
-  color: white;
+  color: Black;
   text-align: justify;
   padding-top: 14em;
   font-family: "Work Sans", sans-serif;
