--- a/css/style.css
+++ b/css/style.css
@@ -377,16 +377,17 @@ section {
 
 #about_us p {
   width: 43em;
-  color: white;
-  text-align: justify;
-  padding-top: 14em;
-  font-family: "Work Sans", sans-serif;
-  margin-left: 6em;
+    color: white;
+    text-align: justify;
+    padding-top: 6em;
+    font-family: Cambria;
+    font-size: 30px;
+    margin-left: 4em;
 }
 
-#about_us p::first-letter {
+#about_us b {
   padding-left: 47px;
-  font-size: 55px;
+  font-size: 35px;
   color: #fc036b;
 }
 
